Overlapping 30 y bins, plus tests

--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "03304ee3-a146-4aa6-b357-0569606acdf1",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "bf6c0c32-8387-4b1a-ab7b-1cec9ebcc5a1",
    "metadata": {},
    "outputs": [],
@@ -29,8 +29,8 @@
     "    Should return two dataArrays with the count of fire Promoting and non fire Promoting modes for the models and years in the input data.\n",
     "    \n",
     "    \"\"\"\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    if critDa\n",
     "\n",
     "    #enso and iod events are positive, sam events are negative\n",
     "    indexNames=list(critDa.index.values)\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "7a1a8e67-e71d-4259-a3b4-50eacff85a62",
    "metadata": {},
    "outputs": [],
@@ -90,15 +90,9 @@
     "    For now, assuming there are only three indeces being assessed, more should be possible, but not in scope\n",
     "    \n",
     "    \"\"\"\n",
-    "    \n",
-    "    #How many events were there in each year?\n",
-    "    fireCount=fireDa.sum(dim='index')\n",
-    "    fireCount=fireCount.assign_coords(index='count')\n",
-    "    fireCount=fireCount.expand_dims('index')\n",
-    "    fireDa = xarray.concat([fireDa, fireCount],'index')\n",
     "\n",
     "    #Which indices are we using?\n",
-    "    indexNames=firePos.index.values\n",
+    "    indexNames=fireDa.index.values\n",
     "\n",
     "    ensoIndex=(set(_index.enso).intersection(indexNames))\n",
     "    iodIndex=(set(_index.iod).intersection(indexNames))\n",
@@ -114,12 +108,11 @@
     "    elif len(samIndex)!=1:\n",
     "        raise Error('number of sam indeces is not 1')\n",
     "\n",
-    "    #Which years are there all three\n",
-    "    threeDa=(fireDa.sel(index='count')==3)\n",
-    "    threeDa['index']='all3'\n",
-    "    threeDa=threeDa.expand_dims('index')\n",
-    "    fireDa=xarray.concat([fireDa,threeDa], 'index')\n",
+    "    #Which years there their three?\n",
+    "    fireDa=compoundThree(fireDa)\n",
+    "    fireDa=fireDa.assign_attrs({**fireDa.attrs, 'all3':str(indexNames)})\n",
     "\n",
+    "    #Something to iterate names of pairs into\n",
     "    pairs=list()\n",
     "    \n",
     "    #Match each index with those further along the index list\n",
@@ -138,6 +131,7 @@
     "            \n",
     "            pairs.append(indexNames[i1]+'+'+indexNames[i2])\n",
     "            \n",
+    "    #Write the names of pairs into attributes for neatness\n",
     "    fireDa=fireDa.assign_attrs({**fireDa.attrs, 'pairs':pairs})\n",
     "            \n",
     "    return fireDa"
@@ -145,8 +139,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0348b793-32d7-4079-b37b-a79273b404d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compoundThree(fireDa): \n",
+    "    \n",
+    "    #How many events were there in each year?\n",
+    "    fireCount=fireDa.sum(dim='index')\n",
+    "    fireCount=fireCount.assign_coords(index='count')\n",
+    "    fireCount=fireCount.expand_dims('index')\n",
+    "    fireDa = xarray.concat([fireDa, fireCount],'index')\n",
+    "    \n",
+    "    #Which years are there all three\n",
+    "    threeDa=(fireDa.sel(index='count')==3)\n",
+    "    threeDa['index']='all3'\n",
+    "    threeDa=threeDa.expand_dims('index')\n",
+    "    fireDa=xarray.concat([fireDa,threeDa], 'index')\n",
+    "\n",
+    "    return fireDa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fb30c124-2890-41a3-bc43-0acd3275e028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def overlappingBinSum(da):\n",
+    "    \"\"\"Return a da with the sum of events for each index given in overlaping 30 year bins, seperated at 10 year intervals\"\"\"\n",
+    "\n",
+    "    #overlapping 30 year bins at 10 year intervals from 850 to 2100\n",
+    "\n",
+    "    #first bin mid poitns is 865, and last is 2085\n",
+    "\n",
+    "    #number of bins is (2085-865)/10 + 1 = 123\n",
+    "\n",
+    "    #output is sum for each index of the number of events, for each interval and experiment\n",
+    "\n",
+    "    #output a list of DA to then concatenate\n",
+    "    \n",
+    "    #a couple of vars to append to\n",
+    "    binMid=list()\n",
+    "    binSum=list()\n",
+    "\n",
+    "    #hardcoding these is lazy, but maybe fine\n",
+    "    startYear=int(da.year[0])\n",
+    "    endYear=int(da.year[-1])\n",
+    "    interval=10\n",
+    "    binSize=30\n",
+    "\n",
+    "    numberOfBins=(endYear-startYear-binSize)/interval + 1\n",
+    "\n",
+    "    # for every bin\n",
+    "    for iBin in numpy.arange(0,numberOfBins):\n",
+    "        # firstYear is 850 + counter*30\n",
+    "        firstYear=startYear+iBin*interval\n",
+    "        # last year is 30 years after\n",
+    "        lastYear=firstYear+binSize\n",
+    "        # label/midPoint for bin\n",
+    "        binMid.append(int((firstYear+lastYear)/2))\n",
+    "        # calculate the sum for this year interval        \n",
+    "        binSum.append(da.where((da.year>=firstYear) & (da.year<lastYear)).sum(dim='year'))\n",
+    "\n",
+    "    #for the list of means, concat the results into a new xarray with new dimension 'year'\n",
+    "    overlapBinDa=xarray.concat(binSum, 'year')\n",
+    "    #populate the dimension year with the midpoint\n",
+    "    overlapBinDa=overlapBinDa.assign_coords(year=binMid)\n",
+    "    #add some attributes for reference\n",
+    "    overlapBinDa=overlapBinDa.assign_attrs({\n",
+    "        **da[0].attrs,\n",
+    "        'Bins':'Overlapping 30 year bins, seperating by 10 year intervals', \n",
+    "        'Year':'Midpoint of bin'\n",
+    "    })\n",
+    "\n",
+    "    return overlapBinDa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "375a1dd0-b7ec-48ae-9dcf-50ff0d5a8295",
    "metadata": {},
    "outputs": [],
    "source": []
