Prototype cmip file loading

--- a/tests/helperTests/testCesmLoad.ipynb
+++ b/tests/helperTests/testCesmLoad.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(sys.path[0]+'/../')\n"
+    "sys.path.append(sys.path[0]+'/../..')\n"
    ]
   },
   {
