everything is broken

--- a/cesmIndeces.ipynb
+++ b/cesmIndeces.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#import my functions\n",
@@ -242,8 +244,7 @@
     "    dim='experiment'\n",
     ")\n",
     "\n",
-    "results.assign_attrs(indeces.attrs)\n",
-    "results.assign_attrs(_index.monthsOfInterest)\n",
+    "results.assign_attrs({indeces.attrs,_index.monthsOfInterest})\n",
     "\n"
    ]
   },
