--- a/tests/utilTests/testAverageForTimePeriod.ipynb
+++ b/tests/utilTests/testAverageForTimePeriod.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,14 +122,14 @@
        "      <th></th>\n",
        "      <th>nino34NoDetrend</th>\n",
        "      <th>nino4NoDetrend</th>\n",
-       "      <th>westIONoDetrend</th>\n",
        "      <th>eastIONoDetrend</th>\n",
        "      <th>dmi</th>\n",
        "      <th>nino34</th>\n",
        "      <th>nino4</th>\n",
-       "      <th>westIO</th>\n",
        "      <th>eastIO</th>\n",
        "      <th>sam</th>\n",
+       "      <th>lat1</th>\n",
+       "      <th>lat2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>year</th>\n",
@@ -148,77 +148,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1995</th>\n",
-       "      <td>2.44497</td>\n",
-       "      <td>2.36956</td>\n",
-       "      <td>1.96825</td>\n",
-       "      <td>2.69948</td>\n",
-       "      <td>2.09695</td>\n",
-       "      <td>1.84111</td>\n",
-       "      <td>2.62889</td>\n",
-       "      <td>3.11660</td>\n",
-       "      <td>2.81387</td>\n",
-       "      <td>2.83194</td>\n",
+       "      <td>2.28502</td>\n",
+       "      <td>2.44189</td>\n",
+       "      <td>2.85653</td>\n",
+       "      <td>2.90004</td>\n",
+       "      <td>2.22618</td>\n",
+       "      <td>2.69166</td>\n",
+       "      <td>3.03808</td>\n",
+       "      <td>3.02550</td>\n",
+       "      <td>3.40336</td>\n",
+       "      <td>3.63989</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1996</th>\n",
-       "      <td>2.86742</td>\n",
-       "      <td>2.45421</td>\n",
-       "      <td>2.62511</td>\n",
-       "      <td>3.22929</td>\n",
-       "      <td>1.53736</td>\n",
-       "      <td>2.00400</td>\n",
-       "      <td>3.05116</td>\n",
-       "      <td>2.45358</td>\n",
-       "      <td>2.05932</td>\n",
-       "      <td>2.46055</td>\n",
+       "      <td>1.98380</td>\n",
+       "      <td>2.17850</td>\n",
+       "      <td>1.82776</td>\n",
+       "      <td>3.05633</td>\n",
+       "      <td>2.32933</td>\n",
+       "      <td>3.52185</td>\n",
+       "      <td>3.71663</td>\n",
+       "      <td>1.95863</td>\n",
+       "      <td>2.50440</td>\n",
+       "      <td>2.47077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1997</th>\n",
-       "      <td>3.24651</td>\n",
-       "      <td>2.14931</td>\n",
-       "      <td>3.34173</td>\n",
-       "      <td>1.96905</td>\n",
-       "      <td>2.93158</td>\n",
-       "      <td>2.44532</td>\n",
-       "      <td>2.56553</td>\n",
-       "      <td>2.26143</td>\n",
-       "      <td>1.87801</td>\n",
-       "      <td>1.85157</td>\n",
+       "      <td>1.91970</td>\n",
+       "      <td>2.09714</td>\n",
+       "      <td>2.19129</td>\n",
+       "      <td>1.77596</td>\n",
+       "      <td>2.89654</td>\n",
+       "      <td>1.41045</td>\n",
+       "      <td>2.29716</td>\n",
+       "      <td>2.45682</td>\n",
+       "      <td>2.88724</td>\n",
+       "      <td>2.15456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998</th>\n",
-       "      <td>1.86576</td>\n",
-       "      <td>3.09986</td>\n",
-       "      <td>2.34779</td>\n",
-       "      <td>2.46384</td>\n",
-       "      <td>2.08002</td>\n",
-       "      <td>2.47089</td>\n",
-       "      <td>2.64109</td>\n",
-       "      <td>2.27982</td>\n",
-       "      <td>2.61062</td>\n",
-       "      <td>3.10332</td>\n",
+       "      <td>1.76502</td>\n",
+       "      <td>3.30321</td>\n",
+       "      <td>2.64186</td>\n",
+       "      <td>3.07833</td>\n",
+       "      <td>3.49750</td>\n",
+       "      <td>2.31967</td>\n",
+       "      <td>1.67788</td>\n",
+       "      <td>1.82896</td>\n",
+       "      <td>2.63465</td>\n",
+       "      <td>1.54948</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      nino34NoDetrend  nino4NoDetrend  westIONoDetrend  eastIONoDetrend  \\\n",
-       "year                                                                      \n",
-       "1995          2.44497         2.36956          1.96825          2.69948   \n",
-       "1996          2.86742         2.45421          2.62511          3.22929   \n",
-       "1997          3.24651         2.14931          3.34173          1.96905   \n",
-       "1998          1.86576         3.09986          2.34779          2.46384   \n",
+       "      nino34NoDetrend  nino4NoDetrend  eastIONoDetrend      dmi   nino34  \\\n",
+       "year                                                                       \n",
+       "1995          2.28502         2.44189          2.85653  2.90004  2.22618   \n",
+       "1996          1.98380         2.17850          1.82776  3.05633  2.32933   \n",
+       "1997          1.91970         2.09714          2.19129  1.77596  2.89654   \n",
+       "1998          1.76502         3.30321          2.64186  3.07833  3.49750   \n",
        "\n",
-       "          dmi   nino34    nino4   westIO   eastIO      sam  \n",
-       "year                                                        \n",
-       "1995  2.09695  1.84111  2.62889  3.11660  2.81387  2.83194  \n",
-       "1996  1.53736  2.00400  3.05116  2.45358  2.05932  2.46055  \n",
-       "1997  2.93158  2.44532  2.56553  2.26143  1.87801  1.85157  \n",
-       "1998  2.08002  2.47089  2.64109  2.27982  2.61062  3.10332  "
+       "        nino4   eastIO      sam     lat1     lat2  \n",
+       "year                                               \n",
+       "1995  2.69166  3.03808  3.02550  3.40336  3.63989  \n",
+       "1996  3.52185  3.71663  1.95863  2.50440  2.47077  \n",
+       "1997  1.41045  2.29716  2.45682  2.88724  2.15456  \n",
+       "1998  2.31967  1.67788  1.82896  2.63465  1.54948  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,9 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['eastIONoDetrend', 'lat2', 'nino4NoDetrend', 'eastIO', 'nino34NoDetrend', 'dmi', 'nino34', 'sam', 'lat1', 'nino4']\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -292,16 +299,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>nino34NoDetrend</th>\n",
-       "      <th>nino4NoDetrend</th>\n",
-       "      <th>westIONoDetrend</th>\n",
        "      <th>eastIONoDetrend</th>\n",
+       "      <th>lat2</th>\n",
+       "      <th>nino4NoDetrend</th>\n",
+       "      <th>eastIO</th>\n",
+       "      <th>nino34NoDetrend</th>\n",
        "      <th>dmi</th>\n",
        "      <th>nino34</th>\n",
-       "      <th>nino4</th>\n",
-       "      <th>westIO</th>\n",
-       "      <th>eastIO</th>\n",
        "      <th>sam</th>\n",
+       "      <th>lat1</th>\n",
+       "      <th>nino4</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>year</th>\n",
@@ -320,77 +327,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1995</th>\n",
-       "      <td>2.44497</td>\n",
-       "      <td>2.36956</td>\n",
-       "      <td>1.96825</td>\n",
-       "      <td>2.69948</td>\n",
-       "      <td>2.09695</td>\n",
-       "      <td>1.84111</td>\n",
-       "      <td>2.62889</td>\n",
-       "      <td>3.11660</td>\n",
-       "      <td>2.81387</td>\n",
-       "      <td>2.83194</td>\n",
+       "      <td>2.85653</td>\n",
+       "      <td>3.63989</td>\n",
+       "      <td>2.44189</td>\n",
+       "      <td>3.03808</td>\n",
+       "      <td>2.28502</td>\n",
+       "      <td>2.90004</td>\n",
+       "      <td>2.22618</td>\n",
+       "      <td>3.02550</td>\n",
+       "      <td>3.40336</td>\n",
+       "      <td>2.85653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1996</th>\n",
-       "      <td>2.86742</td>\n",
-       "      <td>2.45421</td>\n",
-       "      <td>2.62511</td>\n",
-       "      <td>3.22929</td>\n",
-       "      <td>1.53736</td>\n",
-       "      <td>2.00400</td>\n",
-       "      <td>3.05116</td>\n",
-       "      <td>2.45358</td>\n",
-       "      <td>2.05932</td>\n",
-       "      <td>2.46055</td>\n",
+       "      <td>1.82776</td>\n",
+       "      <td>2.47077</td>\n",
+       "      <td>2.17850</td>\n",
+       "      <td>3.71663</td>\n",
+       "      <td>1.98380</td>\n",
+       "      <td>3.05633</td>\n",
+       "      <td>2.32933</td>\n",
+       "      <td>1.95863</td>\n",
+       "      <td>2.50440</td>\n",
+       "      <td>1.82776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1997</th>\n",
-       "      <td>3.24651</td>\n",
-       "      <td>2.14931</td>\n",
-       "      <td>3.34173</td>\n",
-       "      <td>1.96905</td>\n",
-       "      <td>2.93158</td>\n",
-       "      <td>2.44532</td>\n",
-       "      <td>2.56553</td>\n",
-       "      <td>2.26143</td>\n",
-       "      <td>1.87801</td>\n",
-       "      <td>1.85157</td>\n",
+       "      <td>2.19129</td>\n",
+       "      <td>2.15456</td>\n",
+       "      <td>2.09714</td>\n",
+       "      <td>2.29716</td>\n",
+       "      <td>1.91970</td>\n",
+       "      <td>1.77596</td>\n",
+       "      <td>2.89654</td>\n",
+       "      <td>2.45682</td>\n",
+       "      <td>2.88724</td>\n",
+       "      <td>2.19129</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998</th>\n",
-       "      <td>1.86576</td>\n",
-       "      <td>3.09986</td>\n",
-       "      <td>2.34779</td>\n",
-       "      <td>2.46384</td>\n",
-       "      <td>2.08002</td>\n",
-       "      <td>2.47089</td>\n",
-       "      <td>2.64109</td>\n",
-       "      <td>2.27982</td>\n",
-       "      <td>2.61062</td>\n",
-       "      <td>3.10332</td>\n",
+       "      <td>2.64186</td>\n",
+       "      <td>1.54948</td>\n",
+       "      <td>3.30321</td>\n",
+       "      <td>1.67788</td>\n",
+       "      <td>1.76502</td>\n",
+       "      <td>3.07833</td>\n",
+       "      <td>3.49750</td>\n",
+       "      <td>1.82896</td>\n",
+       "      <td>2.63465</td>\n",
+       "      <td>2.64186</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      nino34NoDetrend  nino4NoDetrend  westIONoDetrend  eastIONoDetrend  \\\n",
-       "year                                                                      \n",
-       "1995          2.44497         2.36956          1.96825          2.69948   \n",
-       "1996          2.86742         2.45421          2.62511          3.22929   \n",
-       "1997          3.24651         2.14931          3.34173          1.96905   \n",
-       "1998          1.86576         3.09986          2.34779          2.46384   \n",
+       "      eastIONoDetrend     lat2  nino4NoDetrend   eastIO  nino34NoDetrend  \\\n",
+       "year                                                                       \n",
+       "1995          2.85653  3.63989         2.44189  3.03808          2.28502   \n",
+       "1996          1.82776  2.47077         2.17850  3.71663          1.98380   \n",
+       "1997          2.19129  2.15456         2.09714  2.29716          1.91970   \n",
+       "1998          2.64186  1.54948         3.30321  1.67788          1.76502   \n",
        "\n",
-       "          dmi   nino34    nino4   westIO   eastIO      sam  \n",
-       "year                                                        \n",
-       "1995  2.09695  1.84111  2.62889  3.11660  2.81387  2.83194  \n",
-       "1996  1.53736  2.00400  3.05116  2.45358  2.05932  2.46055  \n",
-       "1997  2.93158  2.44532  2.56553  2.26143  1.87801  1.85157  \n",
-       "1998  2.08002  2.47089  2.64109  2.27982  2.61062  3.10332  "
+       "          dmi   nino34      sam     lat1    nino4  \n",
+       "year                                               \n",
+       "1995  2.90004  2.22618  3.02550  3.40336  2.85653  \n",
+       "1996  3.05633  2.32933  1.95863  2.50440  1.82776  \n",
+       "1997  1.77596  2.89654  2.45682  2.88724  2.19129  \n",
+       "1998  3.07833  3.49750  1.82896  2.63465  2.64186  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,29 +414,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "         True]])"
+       "array([ True,  True,  True,  True])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "numpy.isclose(calculatedAvs, expectedAv)"
+    "numpy.isclose(calculatedAvs.sam, expectedAv.sam)"
    ]
   },
   {
