--- a/cesmIndexConnect.ipynb
+++ b/cesmIndexConnect.ipynb
@@ -1,17 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7539e45-526c-4fd8-ab8a-052cc42767eb",
+   "cell_type": "markdown",
+   "id": "417442b6-e3e7-4701-a130-ae38c30383b7",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Connections of indeces in CESM"
+   ]
   },
   {
    "cell_type": "code",
