Refactor of average for Time Period. No obvious benefit yet

--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "03304ee3-a146-4aa6-b357-0569606acdf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bf6c0c32-8387-4b1a-ab7b-1cec9ebcc5a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +28,6 @@
     "    \n",
     "    \"\"\"\n",
     "    \n",
-    "    if critDa\n",
-    "\n",
     "    #enso and iod events are positive, sam events are negative\n",
     "    indexNames=list(critDa.index.values)\n",
     "    \n",
@@ -79,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7a1a8e67-e71d-4259-a3b4-50eacff85a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +122,7 @@
     "            )\n",
     "            tempDa=tempDa.assign_coords(index=indexNames[i1]+'+'+indexNames[i2])\n",
     "            tempDa=tempDa.expand_dims('index')\n",
-    "            fireDa=xarray.concat([fireDa,tempDa], 'index', combine_attrs='drop_conflicts')\n",
+    "            fireDa=xarray.concat([fireDa,tempDa], 'index')\n",
     "            \n",
     "            pairs.append(indexNames[i1]+'+'+indexNames[i2])\n",
     "            \n",
@@ -140,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0348b793-32d7-4079-b37b-a79273b404d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "fb30c124-2890-41a3-bc43-0acd3275e028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +214,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "375a1dd0-b7ec-48ae-9dcf-50ff0d5a8295",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
