Rainfall plots prototype

--- a/tests/utilTests/testCompound.ipynb
+++ b/tests/utilTests/testCompound.ipynb
@@ -27,7 +27,7 @@
     "import xarray\n",
     "import numpy\n",
     "\n",
-    "%run '../../utils/compound.ipynb'"
+    "%run \"../../utils/compound.ipynb\""
    ]
   },
   {
