--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "a503fd39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "id": "97e87412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,45 +31,25 @@
     "    \"\"\"\n",
     "    \n",
     "    #enso and iod events are positive, sam events are negative\n",
-    "    indexNames=list(critDa.index.values)\n",
+    "    indexNames=list(critDa.variables)\n",
     "    \n",
     "    firePos=list(set(_index.firePos).intersection(indexNames))\n",
     "    fireNeg=list(set(_index.fireNeg).intersection(indexNames))\n",
     "\n",
     "    #events are greater than or less than the criteria\n",
-    "    posEvents=xarray.concat(\n",
-    "        (\n",
-    "            [\n",
-    "            (indexDa>critDa).sel(index=iNam)\n",
-    "            for iNam in indexNames\n",
-    "            ]\n",
-    "            #(indecesDa>criteriaDa).sel(index=['nino34','dmi']),\n",
-    "            #(indecesDa<-criteriaDa).sel(index='sam')\n",
-    "        ),\n",
-    "        'index'\n",
-    "    )\n",
+    "    posEvents=indexDa>critDa\n",
     "\n",
-    "    negEvents=xarray.concat(\n",
-    "        (\n",
-    "            [\n",
-    "            (indexDa<-1*critDa).sel(index=iNam)\n",
-    "            for iNam in indexNames\n",
-    "            ]\n",
-    "        ),\n",
-    "        'index'\n",
-    "    ) \n",
+    "    negEvents=indexDa<-1*critDa\n",
     "    \n",
     "    # a positive impact is a positive event with a positive impact, or a negative event with a negative impact\n",
-    "    firePosDa=xarray.concat(\n",
-    "        (posEvents.sel(index=firePos), negEvents.sel(index=fireNeg)\n",
-    "        ),\n",
-    "        'index')\n",
+    "    firePosDa=xarray.merge(\n",
+    "        [posEvents[firePos], negEvents[fireNeg]]\n",
+    "        )\n",
     "    \n",
     "    # a negative impact is a negative event with a positive impact, or a positive event with a negative impact\n",
-    "    fireNegDa=xarray.concat(\n",
-    "        (negEvents.sel(index=firePos),posEvents.sel(index=fireNeg)\n",
-    "        ),\n",
-    "        'index')\n",
+    "    fireNegDa=xarray.merge(\n",
+    "        [negEvents[firePos],posEvents[fireNeg]]\n",
+    "    )\n",
     "    \n",
     "    return firePosDa, fireNegDa    "
    ]
@@ -75,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "d05160b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +70,7 @@
     "    \"\"\"\n",
     "\n",
     "    #Which indices are we using?\n",
-    "    indexNames=fireDa.index.values\n",
+    "    indexNames=list(fireDa.variables)\n",
     "\n",
     "    ensoIndex=(set(_index.enso).intersection(indexNames))\n",
     "    iodIndex=(set(_index.iod).intersection(indexNames))\n",
@@ -103,8 +86,12 @@
     "    elif len(samIndex)!=1:\n",
     "        raise Error('number of sam indeces is not 1')\n",
     "\n",
-    "    #Which years there their three?\n",
-    "    fireDa=compoundThree(fireDa)\n",
+    "    #How many events were there in each year?\n",
+    "    fireDa['nEvents']=fireDa[indexNames].to_array().sum(dim='variable')\n",
+    "     \n",
+    "    #Which years are there all three\n",
+    "    fireDa['all3']=(fireDa.nEvents==3)\n",
+    "    \n",
     "    fireDa=fireDa.assign_attrs({**fireDa.attrs, 'all3':str(indexNames)})\n",
     "\n",
     "    #Something to iterate names of pairs into\n",
@@ -115,49 +102,24 @@
     "    for i1 in range(0,len(indexNames)):\n",
     "        for i2 in range(i1+1, len(indexNames)):\n",
     "            #Its a compound of those two, if they both occur, and excluding if its a compound of all three\n",
-    "            tempDa=(\n",
-    "                fireDa.sel(index=indexNames[i1])*\n",
-    "                fireDa.sel(index=indexNames[i2])*\n",
-    "                (fireDa.sel(index='all3')==False)\n",
+    "            fireDa[indexNames[i1]+'+'+indexNames[i2]]=(\n",
+    "                fireDa[indexNames[i1]]*\n",
+    "                fireDa[indexNames[i2]]*\n",
+    "                (fireDa['all3']==False)\n",
     "            )\n",
-    "            tempDa=tempDa.assign_coords(index=indexNames[i1]+'+'+indexNames[i2])\n",
-    "            tempDa=tempDa.expand_dims('index')\n",
-    "            fireDa=xarray.concat([fireDa,tempDa], 'index')\n",
     "            \n",
     "            pairs.append(indexNames[i1]+'+'+indexNames[i2])\n",
     "            \n",
     "    #Write the names of pairs into attributes for neatness\n",
-    "    fireDa=fireDa.assign_attrs({**fireDa.attrs, 'pairs':pairs})\n",
+    "    fireDa=fireDa.assign_attrs({**fireDa.attrs,'indeces':indexNames, 'pairs':pairs})\n",
     "            \n",
-    "    return fireDa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compoundThree(fireDa): \n",
-    "    \n",
-    "    #How many events were there in each year?\n",
-    "    fireCount=fireDa.sum(dim='index')\n",
-    "    fireCount=fireCount.assign_coords(index='count')\n",
-    "    fireCount=fireCount.expand_dims('index')\n",
-    "    fireDa = xarray.concat([fireDa, fireCount],'index')\n",
-    "    \n",
-    "    #Which years are there all three\n",
-    "    threeDa=(fireDa.sel(index='count')==3)\n",
-    "    threeDa['index']='all3'\n",
-    "    threeDa=threeDa.expand_dims('index')\n",
-    "    fireDa=xarray.concat([fireDa,threeDa], 'index')\n",
-    "\n",
     "    return fireDa"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "30ee2d91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +165,7 @@
     "    overlapBinDa=overlapBinDa.assign_coords(year=binMid)\n",
     "    #add some attributes for reference\n",
     "    overlapBinDa=overlapBinDa.assign_attrs({\n",
-    "        **da[0].attrs,\n",
+    "        **da.attrs,\n",
     "        'Bins':'Overlapping 30 year bins, seperating by 10 year intervals', \n",
     "        'Year':'Midpoint of bin'\n",
     "    })\n",
@@ -214,6 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9770dbc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -235,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
