--- a/cesmCompoundsType.ipynb
+++ b/cesmCompoundsType.ipynb
@@ -35,6 +35,10 @@
    "outputs": [],
    "source": [
     "#import my functions\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "#import my functions\n",
     "import utils._modelDefinitions as _model\n",
     "import utils._indexDefinitions as _index\n",
     "from utils.timePeriod import averageForTimePeriod\n",
@@ -275,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
