Sandboxing some stats

--- a/cesmPrecTsMonthly.ipynb
+++ b/cesmPrecTsMonthly.ipynb
@@ -40,13 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "54eba285-8f3f-4653-9e14-6b7f3c94171f",
    "metadata": {},
    "outputs": [],
    "source": [
     "secondsPerDay = 60*60*24\n",
-    "secondsToTimeP = secondsPerDay*_index.nDaysOfInterest[\"precAnom\"]*1000/7 #seconds per month"
+    "secondsToTimeP = secondsPerDay*1000 #seconds per day, convert m to mm\n",
+    "#secondsToTimeP = secondsPerDay*_index.nDaysOfInterest[\"precAnom\"]*1000/7 #seconds per month"
    ]
   },
   {
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "706658e3-970a-4d28-8bc6-3d47aee6255f",
    "metadata": {},
    "outputs": [],
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "665ea1d2-dde1-4c72-80d0-d82a01dd25ab",
    "metadata": {},
    "outputs": [],
