Improved Nan processing

--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,9 @@
     "    fireNeg=list(set(_index.fireNeg).intersection(indexNames))\n",
     "\n",
     "    #events are greater than or less than the criteria\n",
-    "    posEvents=indexDa>critDa\n",
-    "\n",
-    "    negEvents=indexDa<-1*critDa\n",
+    "    #doing a comparison with a Nan retruns false, when its easier if its still a Nan, so put the where in to look for nans\n",
+    "    posEvents=(indexDa>critDa).where(indexDa.isnull()!=True)\n",
+    "    negEvents=(indexDa<-1*critDa).where(indexDa.isnull()!=True)\n",
     "    \n",
     "    # a positive impact is a positive event with a positive impact, or a negative event with a negative impact\n",
     "    firePosDa=xarray.merge(\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,10 +84,17 @@
     "        raise Error('number of sam indeces is not 1')\n",
     "\n",
     "    #How many events were there in each year?\n",
-    "    fireDa['nEvents']=fireDa[indexNames].to_array().sum(dim='variable')\n",
+    "    #convert to an Da, so we can sum over the variables\n",
+    "    fireDs=fireDa[indexNames].to_array()\n",
+    "    #number of events is the sum of the three variables, but only where none of them are Nan\n",
+    "    fireDa['nEvents']=fireDs.sum(dim='variable').where(\n",
+    "        fireDs.isnull().all(dim='variable')!=True\n",
+    "    )\n",
     "     \n",
     "    #Which years are there all three\n",
-    "    fireDa['all3']=(fireDa.nEvents==3)\n",
+    "    fireDa['all3']=(fireDa.nEvents==3).where(\n",
+    "        fireDa.nEvents.isnull()!=True\n",
+    "    )\n",
     "    \n",
     "    fireDa=fireDa.assign_attrs({**fireDa.attrs, 'all3':str(indexNames)})\n",
     "\n",
@@ -115,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +159,9 @@
     "        lastYear=firstYear+binSize\n",
     "        # label/midPoint for bin\n",
     "        binMid.append(int((firstYear+lastYear)/2))\n",
-    "        # calculate the sum for this year interval        \n",
-    "        binSum.append(da.where((da.year>=firstYear) & (da.year<lastYear)).sum(dim='year'))\n",
+    "        # calculate the sum for this year interval\n",
+    "        daInterval = da.sel(year=slice(firstYear,lastYear))\n",
+    "        binSum.append(daInterval.sum(dim='year').where(daInterval.isnull().any(dim='year')!=True))\n",
     "\n",
     "    #for the list of means, concat the results into a new xarray with new dimension 'year'\n",
     "    overlapBinDa=xarray.concat(binSum, 'year')\n",
