CI plots for compound trends

--- a/cmipIndeces.ipynb
+++ b/cmipIndeces.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file just calculates all the indeces for all months for all cesmFullForcingFiles.\n",
+    "This file \n",
+    "1. calculates all the indeces for all months for all cesmFullForcingFiles.\n",
     "\n"
    ]
   },
@@ -41,6 +42,13 @@
    "source": [
     "import xarray\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Calculate CESM Indeces"
    ]
   },
   {
@@ -140,13 +148,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculate CESM Indeces"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This grabs the monthly CESM indeces, and calculates the averages for the time periods of interest (aka the warm season), as set in the _indexDefitionions file\n",
     "\n",
     "Theres a few examples of output at the bottom to sanity check this is meaningful"
@@ -233,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Some sanity checks to see if it looks ok:\n"
+    "Some sanity checks to see if it looks ok:\n"
    ]
   },
   {
@@ -1272,7 +1273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculate Compound Years for CESM"
+    "# 2. Calculate Compound Years for CESM"
    ]
   },
   {
@@ -2367,7 +2368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
